--- a/package.json
+++ b/package.json
@@ -1,10 +1,41 @@
 {
   "name": "reflect-form",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Effector forms over reflect",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "razzle start --type=spa",
+    "build": "razzle build --type=spa",
+    "test": "razzle test --env=jsdom",
+    "start:prod": "serve -s build/public"
+  },
+  "dependencies": {
+    "effector": "^21.7.5",
+    "effector-react": "^21.2.1",
+    "effector-reflect": "^0.3.2",
+    "eslint": "^7.17.0",
+    "express": "^4.17.1",
+    "patronum": "^1.0.0",
+    "prettier": "^2.2.1",
+    "razzle-plugin-typescript": "^3.3.9",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
+    "@types/webpack-env": "^1.16.0",
+    "core-js": "^3.8.2",
+    "razzle": "^3.3.9"
   },
   "repository": {
     "type": "git",
