feat(select): added select component

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint/eslint-plugin", "react", "unicorn"],
   "extends": [
     "@eslint-kit/base",
     "@eslint-kit/prettier",
     "@eslint-kit/react",
     "@eslint-kit/typescript",
-    "plugin:prettier/recommended"
+    "plugin:sonarjs/recommended"
   ],
+  "plugins": ["@typescript-eslint/eslint-plugin", "react", "unicorn", "sonarjs"],
   "overrides": [
     {
       "files": ["**/*.test.ts", "**/*.test.tsx"],
@@ -24,8 +23,13 @@
       ],
       "rules": {
         "no-unused-vars": "off",
-        "@typescript-eslint/explicit-function-return-type": "off"
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
       }
+    },
+    {
+      "files": [".eslintrc", "*.config.js", "scripts/**/*.js"],
+      "env": { "node": true }
     }
   ],
   "rules": {
@@ -44,5 +48,14 @@
   },
   "env": {
     "browser": true
+  },
+  "settings": {
+    "import/extensions": [".ts", ".tsx"],
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".tsx", ".js", ".jsx"],
+        "moduleDirectory": ["node_modules", "src"]
+      }
+    }
   }
 }
