--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start:prod": "serve -s build/public"
   },
   "dependencies": {
+    "@effector/reflect": "^0.4.1",
     "effector": "^21.7.5",
     "effector-react": "^21.2.1",
-    "@effector/reflect": "^0.4.1",
     "eslint": "^7.17.0",
     "express": "^4.17.1",
     "patronum": "^1.0.0",
@@ -20,12 +20,14 @@
     "razzle-plugin-typescript": "^3.3.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-is": "^16.8.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
@@ -35,7 +37,8 @@
     "@types/styled-components": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
-    "razzle": "^3.3.9"
+    "razzle": "^3.3.9",
+    "webpack": "^4.0.0"
   },
   "repository": {
     "type": "git",
