--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: v14.x
 
       - name: Install dependencies
-        run: yarn install --non-interactive --no-progress --frozen-lockfile --verbose
+        run: yarn install --non-interactive --no-progress --frozen-lockfile
 
       - name: Build
         run: yarn build
