ci: dist directory

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
         run: yarn build
 
       - name: Create 404.html to handle all routes by SPA
-        run: cp ./dist/index.html ./dist/404.html
+        run: cp ./build/public/index.html ./build/public/404.html
 
       - name: Deploy to Github Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/
+          publish_dir: build/public/
