--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Create 404.html to handle all routes by SPA
         run: cp ./build/public/index.html ./build/public/404.html
 
+      - name: Copy CNAME to dist
+        run: cp ./CNAME ./build/public/CNAME
+
       - name: Deploy to Github Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
