feat(initial-validation): Добавлен флаг валидности field & fieldset для required полей

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@effector/reflect": "^0.4.1",
     "effector": "^21.7.5",
     "effector-react": "^21.2.1",
-    "eslint": "^7.17.0",
+    "eslint": "^7.20.0",
     "express": "^4.17.1",
     "patronum": "^1.0.0",
     "prettier": "^2.2.1",
@@ -31,6 +31,10 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@eslint-kit/eslint-config-base": "^3.0.0",
+    "@eslint-kit/eslint-config-prettier": "^2.0.0",
+    "@eslint-kit/eslint-config-react": "^2.1.0",
+    "@eslint-kit/eslint-config-typescript": "^3.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
