--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noEmit": true,
-    "target": "ESNext",
+    "target": "es2018",
     "sourceMap": false,
     "strict": true,
     "strictNullChecks": true,
