--- a/package.json
+++ b/package.json
@@ -2,46 +2,50 @@
   "name": "reflect-form",
   "version": "0.0.1",
   "description": "Effector forms over reflect",
-  "main": "index.js",
+  "main": "dist/reflect-form.cjs.js",
+  "module": "dist/reflect-form.esm.js",
+  "browser": "dist/reflect-form.umd.js",
   "scripts": {
     "start": "razzle start --type=spa",
-    "build": "razzle build --type=spa",
-    "test": "razzle test --env=jsdom --passWithNoTests",
-    "start:prod": "serve -s build/public"
+    "start:prod": "serve -s build/public",
+    "build:demo": "razzle build --type=spa",
+    "test": "razzle test --env=jsdom --passWithNoTests"
   },
-  "dependencies": {
-    "@effector/reflect": "^0.4.1",
-    "effector": "^21.7.5",
-    "effector-react": "^21.2.1",
-    "eslint": "^7.20.0",
-    "express": "^4.17.1",
-    "patronum": "^1.0.0",
-    "prettier": "^2.2.1",
-    "razzle-plugin-typescript": "^3.3.9",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^16.8.0",
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@effector/reflect": "^0.6.0",
     "@eslint-kit/eslint-config-base": "^3.0.0",
     "@eslint-kit/eslint-config-prettier": "^2.0.0",
     "@eslint-kit/eslint-config-react": "^2.1.0",
     "@eslint-kit/eslint-config-typescript": "^3.2.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^18.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
+    "effector": "^21.8.11",
+    "effector-react": "^21.3.2",
+    "eslint": "^7.20.0",
+    "express": "^4.17.1",
+    "patronum": "^1.1.0",
+    "prettier": "^2.2.1",
     "razzle": "^3.3.9",
+    "razzle-plugin-typescript": "^3.3.9",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-is": "^16.8.0",
+    "react-router-dom": "^5.2.0",
+    "rollup": "^2.47.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "styled-components": "^5.2.1",
     "stylelint": "^13.10.0",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-recommended": "^3.0.0",
@@ -49,7 +53,10 @@
     "stylelint-no-unsupported-browser-features": "^4.1.4",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
-    "webpack": "^4.0.0"
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^4.6.0"
   },
   "repository": {
     "type": "git",
